--- a/style.css
+++ b/style.css
@@ -8,5 +8,13 @@
 body {
     display: flex;
     flex-direction: column;
-    
+}
+
+.header {
+    background-color: #1F2937;
+    display: flex;
+}
+
+.main {
+    flex-grow: 1;
 }
