--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     text-decoration: none;
     padding: 0;
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -10,9 +11,28 @@ body {
     flex-direction: column;
 }
 
+a {
+    color: #e5e7eb;
+}
+
 .header {
     background-color: #1F2937;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 100px;
+    height: 50px;
+    flex-shrink: 0;
+}
+
+.header h1 {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+.header ul {
+    display: flex;
+    gap: 12px;
 }
 
 .main {
