--- a/style.css
+++ b/style.css
@@ -38,4 +38,13 @@ a {
 
 .main {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero,
+.info,
+.quote,
+.cta {
+    flex-grow: 1;
 }
