--- a/style.css
+++ b/style.css
@@ -6,3 +6,42 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.quad1,
+.quad2,
+.quad3,
+.quad4 {
+    flex-grow: 1;
+}
+
+.header {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 100px;
+    height: 50px;
+}
+
+.header h1 {
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+.header ul {
+    display: flex;
+    gap: 18px;
+}
+
+.header a {
+    color: #e5e7eb;
+}
+
+.hero {
+    background-color: red;
+}
