--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 }
 
 .header {
-    /* background-color: #1f2937; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,7 +49,6 @@ body {
 }
 
 .hero {
-    /* background-color: #1f2937; */
     display: flex;
     
     gap: 30px;
@@ -104,9 +102,19 @@ body {
 }
 
 .quad2 h2 {
-
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+    align-self: center;
 }
 
 .info {
+    display: flex;
+}
 
+.container-image {
+    height: 100px;
+    flex-basis: 100px;
+    border: #3882f6;
+    border-width: 5px;
 }
