--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
 .quad2 {
     display: flex;
     flex-direction: column;
-
+    align-items: center;
 }
 
 .quad2 h2 {
@@ -110,11 +110,26 @@ body {
 
 .info {
     display: flex;
+    padding: 10px 300px;
+    gap: 20px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 175px;
+    width: 175px;
 }
 
 .container-image {
-    height: 100px;
-    flex-basis: 100px;
-    border: #3882f6;
-    border-width: 5px;
+    width: 175px;
+    flex-basis: 175px;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.container p {
+    text-align: center;
 }
