Remove redundant styling from .container
Width/flex-basis were both listed on both container and container-image, only need this styling on one item.

--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    flex-basis: 175px;
-    width: 175px;
+    /* flex-basis: 175px; */
+    /* width: 175px; */
 }
 
 .container-image {
