--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 .info {
     display: flex;
     padding: 10px 300px;
-    gap: 20px;
+    gap: 40px;
 }
 
 .container {
@@ -128,8 +128,13 @@ body {
     border-radius: 10px;
     flex-grow: 0;
     flex-shrink: 0;
+    margin-bottom: 10px;
 }
 
 .container p {
     text-align: center;
+}
+
+.quad3 {
+    display: flex;
 }
